--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,15 +2,15 @@ name: go
 
 on:
   schedule:
-    - cron: '0 15 * * *'
+    - cron: '20 7 * * *'
 
 jobs:
   go:
     runs-on: ubuntu-16.04
     strategy:
       matrix:
-        branch: [master, release-branch.go1.20, release-branch.go1.19, release-branch.go1.18]
-        goos: [linux, windows, darwin]
+        branch: [master, release-branch.go1.20, release-branch.go1.19]
+        goos: [linux, windows]
         goarch: [amd64, arm64]
     steps:
       - uses: actions/setup-go@v4
