--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,10 +15,11 @@ jobs:
     steps:
       - uses: actions/setup-go@v4
         with:
-          go-version: '1.20'
+          go-version: '1.21'
           check-latest: true
       - name: Setup
         run: |
+          sudo DEBIAN_FRONTEND=noninteractive apt update -yq
           sudo DEBIAN_FRONTEND=noninteractive apt install -yq golang pigz bzip2
       - name: Clone
         run: |
