--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           patch -p1 -d /opt/go < 02-http2date.patch
       - name: Patch 03-tlsclienthello.patch
-        if: matrix.branch == 'release-branch.go1.22'
+        if: matrix.branch == 'master'
         run: |
           patch -p1 -d /opt/go < 03-tlsclienthello.patch
       - name: Make
