--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        branch: [master, release-branch.go1.22, release-branch.go1.21, release-branch.go1.20, release-branch.go1.19]
+        branch: [master, release-branch.go1.23, release-branch.go1.22, release-branch.go1.21, release-branch.go1.20, release-branch.go1.19]
         goos: [linux, windows, darwin]
         goarch: [amd64, arm64]
     steps:
