--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,13 +12,13 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        branch: [master, release-branch.go1.23, release-branch.go1.22, release-branch.go1.21, release-branch.go1.20, release-branch.go1.19]
+        branch: [master, release-branch.go1.24, release-branch.go1.23, release-branch.go1.22, release-branch.go1.21]
         goos: [linux, windows, darwin]
         goarch: [amd64, arm64]
     steps:
       - uses: actions/setup-go@v4
         with:
-          go-version: '1.22.6'
+          go-version: '1.24.0'
           check-latest: true
       - uses: actions/checkout@v4
       - name: Setup
