--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -36,6 +36,10 @@ jobs:
         if: matrix.branch == 'master'
         run: |
           patch -p1 -d /opt/go < 02-http2date.patch
+      - name: Patch 03-largecores.diff
+        if: matrix.branch == 'master'
+        run: |
+          patch -p1 -d /opt/go < 03-largecores.diff
       - name: Make
         run: |
           cd /opt/go/src
